--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -307,7 +307,7 @@ body.dark-mode {
     position:absolute;
     width:374px;
     height:666px;
-    background-image: url(../public/closet/pink-stripes-sweatertop.png);
+    background-image: url(../public/closet/pink-stripes-sweatertop.PNG);
 }
 .top3{
     position:absolute;
